<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    >
<TableLayout  
	android:id="@+id/display"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:stretchColumns="1"
    >
    <TableRow>
    	<TextView android:visibility="invisible" />
    	<TextView
    	 android:text="@string/disp_local_currency"
    	 android:padding="3dip"
    	 android:gravity="right"/>
    	 <TextView
    	 android:id="@+id/head_fx"
    	 android:text="@string/disp_ref_currency"
    	 android:padding="3dip"
    	 android:gravity="right"/>
    </TableRow>
    <View
        android:layout_height="2dip"
        android:background="#FF909090" />
  <TableRow
    android:id="@+id/row_amount">
    <TextView
     android:text="@string/disp_amount"
     android:padding="5dip"/>
     <TextView
      android:id="@+id/loc_amount"
      android:padding="5dip"
      android:gravity="right"/>
    <TextView
      android:id="@+id/ref_amount"
      android:padding="5dip"
      android:gravity="right"/>
    </TableRow>
    <View
        android:layout_height="2dip"
        android:background="#FF909090" />
    <TableRow
      android:id="@+id/row_tax">
      <TextView
         android:id="@+id/head_tax"
         android:text="@string/disp_tax"
         android:padding="5dip"/>
       <TextView
         android:id="@+id/loc_tax"
         android:padding="5dip"
         android:gravity="right"/>
        <TextView
         android:id="@+id/ref_tax"
         android:padding="5dip"
         android:gravity="right"/>
    </TableRow>
   <TableRow
     android:id="@+id/row_tip">
      <TextView
      	 android:id="@+id/head_tip"
         android:text="@string/disp_tip"
         android:padding="5dip"/>
       <TextView
         android:id="@+id/loc_tip"
         android:padding="5dip"
         android:gravity="right"/>
        <TextView
         android:id="@+id/ref_tip"
         android:padding="5dip"
         android:gravity="right"/>
    </TableRow>
    <View
        android:layout_height="2dip"
        android:background="#FF909090" />
  <TableRow>
      <TextView
         android:text="@string/disp_total"
         android:padding="5dip"/>
       <TextView
         android:id="@+id/loc_total"
         android:padding="5dip"
         android:gravity="right"/>
        <TextView
         android:id="@+id/ref_total"
         android:padding="5dip"
         android:gravity="right"/>
    </TableRow>        
       <View
        android:layout_height="4dip"
        android:background="#FF909090" />
  <TableRow
    android:id="@+id/row_people">
      <TextView
         android:id="@+id/head_people"
         android:text="@string/disp_people"
         android:padding="5dip"/>
       <TextView
         android:id="@+id/loc_people"
         android:padding="5dip"
         android:gravity="right"/>
        <TextView
         android:id="@+id/ref_people"
         android:padding="3dip"
         android:gravity="right"/>
    </TableRow>        
    </TableLayout>
  <TableLayout
  	 android:id="@+id/keypad"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:gravity="bottom"
    />  
    
</LinearLayout>
